--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -17,7 +17,7 @@
 
 .h1_links{
   text-decoration: none;
-  font-family: 'Aclonica', sans-serif;
+  font-family: 'Comfortaa', cursive;
   color:#000;
   font-size:32px;
 }
